--- a/generators/app/templates/pc/package.json
+++ b/generators/app/templates/pc/package.json
@@ -11,16 +11,14 @@
     "clean": "rimraf www _dist _package",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e",
-    "dev": "kobe dev",
-    "h5build": "npm run clean && kobe build && kobe deploy",
-    "inspect": "kobe build --inspect",
     "lint": "npm run lint:js && npm run lint:style",
     "lint:js": "eslint .",
     "lint:style": "stylelint \"**/*.less\" --syntax less"
   },
   "dependencies": {
-    "@alipay/kobe-cli": "2",
-    "@alipay/kobe-solution-koubeib-h5": "2"
+    "@alipay/kos-wrapper-pc": "1",
+    "antd": "3",
+    "classnames": "2"
   },
   "devDependencies": {
     "@alipay/commitlint-config-kobe": "2",
@@ -28,7 +26,7 @@
     "@alipay/stylelint-config-kobe": "2",
     "@commitlint/cli": "6",
     "eslint": "4",
-    "husky": "0.14",
+    "husky": "0",
     "lint-staged": "7",
     "rimraf": "2",
     "stylelint": "9"
@@ -39,7 +37,6 @@
   "publishConfig": {
     "registry": "http://registry.npm.alibaba-inc.com"
   },
-  "appId": "",
   "commitlint": {
     "extends": [
       "@alipay/commitlint-config-kobe"
