--- a/generators/app/templates/saas-pc-spa/.stylelintrc
+++ b/generators/app/templates/saas-pc-spa/.stylelintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "selector-max-id": 0,
+    "selector-max-type": 0
+  }
 }
