saas-pc-spa 切换为 ts

--- a/generators/app/templates/saas-pc-spa/.eslintrc
+++ b/generators/app/templates/saas-pc-spa/.eslintrc
@@ -1,4 +1,6 @@
 {
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "extends": "@alipay/eslint-config-kobe",
   "rules": {
     "semi": [2, "always"],
