--- a/generators/app/templates/saas-pc-spa/package.json
+++ b/generators/app/templates/saas-pc-spa/package.json
@@ -12,7 +12,7 @@
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e",
     "lint": "npm run lint:js && npm run lint:style",
-    "lint:js": "eslint ./src",
+    "lint:js": "eslint ./src --ext '.ts,.tsx,.js,.jsx'",
     "lint:style": "stylelint \"**/*.less\" --syntax less"
   },
   "dependencies": {
