--- a/generators/app/templates/saas-pc-spa/.stylelintrc
+++ b/generators/app/templates/saas-pc-spa/.stylelintrc
@@ -1,7 +1,7 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": "@ali/stylelint-config-ali",
   "rules": {
     "selector-max-id": 0,
-    "selector-max-type": 0
+    "selector-max-type": 0,
   }
 }
