--- a/generators/app/templates/saas-pc-spa/package.json
+++ b/generators/app/templates/saas-pc-spa/package.json
@@ -20,10 +20,9 @@
     "@ali/stylelint-config-ali": "^0.2.4",
     "@alipay/kos-wrapper-pc": "1",
     "@alipay/mo-alsh-merchant-framework": "1",
+    "@types/kos-core": "^0.6.0",
     "antd": "3",
     "classnames": "2",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-vue": "^5.2.3",
     "single-spa": "4",
     "single-spa-react": "2",
     "systemjs": "4",
@@ -36,7 +35,12 @@
     "@commitlint/cli": "6",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
-    "eslint": "^6.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-ali": "^7.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-vue": "^5.2.3",
     "husky": "0",
     "lint-staged": "7",
     "rimraf": "2",
