--- a/generators/app/templates/saas-pc-spa/.stylelintrc
+++ b/generators/app/templates/saas-pc-spa/.stylelintrc
@@ -3,5 +3,8 @@
   "rules": {
     "selector-max-id": 0,
     "selector-max-type": 0,
+    "selector-pseudo-class-no-unknown": [true, {
+      "ignorePseudoClasses": ["global"]
+    }]
   }
 }
