--- a/generators/app/templates/saas-h5/package.json
+++ b/generators/app/templates/saas-h5/package.json
@@ -18,9 +18,9 @@
   "dependencies": {
     "@ali/saas-plugin-fireworm": "1",
     "@alipay/kos-wrapper-pc": "2",
-    "@alipay/mo-alsh-merchant-framework": "^1.0.28",
     "antd": "3",
-    "classnames": "2"
+    "classnames": "2",
+    "redux-logger": "3"
   },
   "devDependencies": {
     "@alipay/commitlint-config-kobe": "2",
