--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ali/generator-saas",
-  "version": "1.0.45",
-  "description": "The DEF saas generator for koubei",
+  "name": "@saasfe/generator-saas",
+  "version": "0.0.1",
+  "description": "The KOS saas generator",
   "scripts": {
   },
   "repository": {
@@ -11,7 +11,7 @@
   "author": "yongbao.fyb",
   "license": "ISC",
   "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
+    "registry": "http://registry.npmjs.org/"
   },
   "dependencies": {
     "yeoman-generator": "^2.0.1",
