--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@saasfe/generator-saas",
   "version": "0.0.3",
   "description": "The KOS saas generator",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": ""
@@ -14,11 +13,11 @@
     "registry": "http://registry.npmjs.org/"
   },
   "dependencies": {
-    "yeoman-generator": "^2.0.1",
     "chalk": "^2.1.0",
+    "ora": "^4.0.3",
+    "yeoman-generator": "^2.0.1",
     "yosay": "^2.0.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "readmeFilename": "README.md"
 }
