--- a/generators/app/templates/saas-microapp/.stylelintrc
+++ b/generators/app/templates/saas-microapp/.stylelintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "@ali/stylelint-config-ali",
+  "extends": "stylelint-config-ali",
   "rules": {
     "selector-max-id": 0,
     "selector-max-type": 0,
