feat: jenkins脚本添加辰森私域登录

--- a/generators/app/templates/saas-microapp/Jenkinsfile
+++ b/generators/app/templates/saas-microapp/Jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
       steps {
         script{
           sh "echo 'build'"
+          sh "npm-cli-login -u choicefepublic -p mRsMBN6SB148QnX7 -e feteam@choicesoft.com.cn"
           sh 'cnpm install'
           sh 'ls'
           sh 'kos build --appName ${appName} --env ${buildEnv} --version ${branchVersion}'
