--- a/generators/app/templates/saas-weapp-child/package.json
+++ b/generators/app/templates/saas-weapp-child/package.json
@@ -43,7 +43,7 @@
     "install-node": "8"
   },
   "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
+    "registry": "http://npm.choicesaas.cn/"
   },
   "lint-staged": {
     "*.ts": "eslint",
