--- a/generators/app/templates/saas-weapp-host/package.json
+++ b/generators/app/templates/saas-weapp-host/package.json
@@ -16,6 +16,7 @@
     "lint:style": "stylelint \"**/*.less\" --syntax less"
   },
   "dependencies": {
+    "@choicefe/we-app-generator": "^0.0.1",
     "@saasfe/we-app": "^1.0.0",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
@@ -37,15 +38,15 @@
     "lint-staged": "7",
     "rimraf": "2",
     "stylelint": "9",
-    "stylelint-scss": "^3.9.1",
     "stylelint-config-ali": "^0.2.4",
+    "stylelint-scss": "^3.9.1",
     "typescript": "^3.5.3"
   },
   "engines": {
     "install-node": "8"
   },
   "publishConfig": {
-    "registry": "http://registry.npm.alibaba-inc.com"
+    "registry": "http://npm.choicesaas.cn/"
   },
   "lint-staged": {
     "*.ts": "eslint",
