--- a/generators/app/templates/saas-weapp-host/package.json
+++ b/generators/app/templates/saas-weapp-host/package.json
@@ -17,30 +17,31 @@
   },
   "dependencies": {
     "@choicefe/we-app-generator": "^0.0.1",
-    "@saasfe/we-app": "^1.0.0",
+    "@saasfe/we-app": "^1.0.5",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
-    "classnames": "2",
+    "choice-cbm": "^1.0.12",
+    "classnames": "^2.2.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "6",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
+    "@commitlint/cli": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-config-ali": "^7.1.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-vue": "^5.2.3",
-    "husky": "0",
-    "lint-staged": "7",
-    "rimraf": "2",
-    "stylelint": "9",
-    "stylelint-config-ali": "^0.2.4",
-    "stylelint-scss": "^3.9.1",
-    "typescript": "^3.5.3"
+    "husky": "^0.14.3",
+    "lint-staged": "^7.3.0",
+    "rimraf": "^2.7.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-ali": "^0.2.6",
+    "stylelint-scss": "^3.14.2",
+    "typescript": "^3.8.3"
   },
   "engines": {
     "install-node": "8"
