--- a/generators/app/templates/saas-weapp-host/package.json
+++ b/generators/app/templates/saas-weapp-host/package.json
@@ -16,7 +16,7 @@
     "lint:style": "stylelint \"**/*.less\" --syntax less"
   },
   "dependencies": {
-    "@choicefe/we-app-generator": "^0.0.1",
+    "@choicefe/we-app-generator": "^0.x",
     "@saasfe/we-app": "^1.0.5",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
